# 2D_RocketSim

./: .gitignore  CMakeLists.txt  README.md  lqr_gains.json  lqr_gains_slow.json  sim_log.csv
data/: lqr_gains_fast.json  sim_log.csv
include/: Controller.h  Rocket.h  Visualization.h
scripts/: compute_lqr_gains.py  plot_poles.py  plot_sim.py
src/: Controller.cpp  Rocket.cpp  Visualization.cpp  main.cpp  main_fast.cpp  main_slow.cpp
